--- a/index.html
+++ b/index.html
@@ -19,15 +19,42 @@
       <button>Travel</button>
     </nav>
     <main>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div class="imageContainer">
+            <img src="" alt="">
+            <div></div>
+        </div>
+        <div class="imageContainer">
+            <img src="" alt="">
+            <div></div>
+        </div>
+        <div class="imageContainer">
+            <img src="" alt="">
+            <div></div>
+        </div>
+        <div class="imageContainer">
+            <img src="" alt="">
+            <div></div>
+        </div>
+        <div class="imageContainer">
+            <img src="" alt="">
+            <div></div>
+        </div>
+        <div class="imageContainer">
+            <img src="" alt="">
+            <div></div>
+        </div>
+        <div class="imageContainer">
+            <img src="" alt="">
+            <div></div>
+        </div>
+        <div class="imageContainer">
+            <img src="" alt="">
+            <div></div>
+        </div>
+        <div class="imageContainer">
+            <img src="" alt="">
+            <div></div>
+        </div>
     </main>
   </body>
 </html>
