--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Photo Gallery</title>
     <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <header>
@@ -19,42 +26,77 @@
       <button>Travel</button>
     </nav>
     <main>
-        <div class="imageContainer">
-            <img src="" alt="">
-            <div></div>
+      <div class="imageContainer">
+        <img src="images/Mountain Vista.jpeg" alt="Mountain Vista" />
+        <div class="containerInfo">
+          <h3>Mountain Vista</h3>
+          <p>Beautiful mountain landscape at sunset</p>
         </div>
-        <div class="imageContainer">
-            <img src="" alt="">
-            <div></div>
+      </div>
+      <div class="imageContainer">
+        <img src="images/Urban Skyline.jpg" alt="Urban Skyline" />
+        <div class="containerInfo">
+          <h3>Urban Skyline</h3>
+          <p>City view from the observation deck</p>
         </div>
-        <div class="imageContainer">
-            <img src="" alt="">
-            <div></div>
+      </div>
+      <div class="imageContainer">
+        <img src="images/Street Portrait.jpeg" alt="Street Portrait" />
+        <div class="containerInfo">
+          <h3>Street Portrait</h3>
+          <p>Candid moment captured in the city</p>
         </div>
-        <div class="imageContainer">
-            <img src="" alt="">
-            <div></div>
+      </div>
+      <div class="imageContainer">
+        <img src="images/Coastal Sunset.jpeg" alt="Coastal Sunset" />
+        <div class="containerInfo">
+          <h3>Coastal Sunset</h3>
+          <p>Waves crashing as the sun sets</p>
         </div>
-        <div class="imageContainer">
-            <img src="" alt="">
-            <div></div>
+      </div>
+      <div class="imageContainer">
+        <img src="images/Modern Architecture.jpeg" alt="Modern Architecture" />
+        <div class="containerInfo">
+          <h3>Modern Architecture</h3>
+          <p>Contemporary building design in glass and steel</p>
         </div>
-        <div class="imageContainer">
-            <img src="" alt="">
-            <div></div>
+      </div>
+      <div class="imageContainer">
+        <img src="images/Wildlife Encounter.jpeg" alt="Wildlife Encounter" />
+        <div class="containerInfo">
+          <h3>Wildlife Encounter</h3>
+          <p>Wild animals in their natural habitat</p>
         </div>
-        <div class="imageContainer">
-            <img src="" alt="">
-            <div></div>
+      </div>
+      <div class="imageContainer">
+        <img src="images/Urban Street.jpeg" alt="Urban Street" />
+        <div class="containerInfo">
+          <h3>Urban Street</h3>
+          <p>Busy city life captured in a moment</p>
         </div>
-        <div class="imageContainer">
-            <img src="" alt="">
-            <div></div>
+      </div>
+      <div class="imageContainer">
+        <img src="images/Spring Bloom.jpeg" alt="Spring Bloom" />
+        <div class="containerInfo">
+          <h3>Spring Bloom</h3>
+          <p>Colorful flowers in a garden setting</p>
         </div>
-        <div class="imageContainer">
-            <img src="" alt="">
-            <div></div>
+      </div>
+      <div class="imageContainer">
+        <img src="images/Culinary Delight.jpeg" alt="Culinary Delight" />
+        <div class="containerInfo">
+          <h3>Culinary Delight</h3>
+          <p>Gourmet dish presentation</p>
         </div>
+      </div>
     </main>
+    <footer>
+      <p>&copy; 2025 Photo Gallery. All rights reserved.</p>
+      <ul>
+        <li><i class="fa-brands fa-x-twitter"></i></li>
+        <li><i class="fa-brands fa-linkedin"></i></li>
+        <li><i class="fa-brands fa-instagram"></i></li>
+      </ul>
+    </footer>
   </body>
 </html>
